# Discord-ModHook-Legacy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ModHook.sln  README.md
LibModHook/: LibModHook.cpp  LibModHook.h  LibModHook.vcxproj  LibModHook.vcxproj.filters  cpp.hint
ModHook/: CMakeLists.txt  Injection.cpp  Injection.h  ModHook.cpp  ModHook.h  ModHook.vcxproj  ModHook.vcxproj.filters
ModHook/resources/: vencord.asar
ModHook/resources/__vencord.asar/: index.js
ModHookInjection/: ModHookInjection.h  ModHookInjection.vcxproj  ModHookInjection.vcxproj.filters  dllmain.cpp  dllmain.def
resources/: vencord.asar
resources/__vencord.asar/: index.js  package.json
src/: CMakeLists.txt  Injection.cpp  Injection.h  LibModHook.cpp  LibModHook.h  ModHook.cpp  ModHook.h
